tests/samples/negative/generics/unknown_generic_function.ax
module unknown_generic_function;

fn main() -> i32 {
    let value = missing<i32>(1);
    return value;
}
